# Topaz

./: .gitignore  README.md  package.json  private_config.json
configs/: private_config.json
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  local_dir.rs  main.rs  server.rs  server_client.rs  server_host.rs  types.rs
src/components/: Button.svelte  Menu.svelte  TextInput.svelte
src/icons/: close.svelte  copy.svelte  help-circle.svelte  line.svelte  square.svelte
src/routes/: +layout.svelte
src/routes/link-directory/: +page.svelte
src/routes/my-linked-paths/[linked_path]/: +page.svelte
src/routes/my-networks/: +page.svelte
src/routes/my-networks/(inner)/: +layout.svelte
src/routes/my-networks/(inner)/[network]/: +page.svelte
src/routes/my-networks/(inner)/[network]/client/: +page.svelte
src/routes/my-networks/(inner)/create/: +page.svelte
src/routes/my-networks/(inner)/join/: +page.svelte
