[package]
name = "topaz"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "topaz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.64"
lazy_static = "1.5.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tauri-plugin-dialog = "2.0.0"
actix-web = "4.9.0"
env_logger = "0.11.5"
log = "0.4.22"
actix-files = "0.6.6"
tauri-plugin-fs = "2"
get_if_addrs = "0.5.3"

