[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.64"
lazy_static = "1.5.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
env_logger = "0.11.5"
log = "0.4.22"
get_if_addrs = "0.5.3"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace", "timeout"] }
url = "2.5.4"

